AndroidUnsafe: add NativeLibrary; AndroidPanama: fix libraryLookup